--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
+        <title>Portfolio</title>
+        <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" >
+        <meta name="description" content="Showcase of some of my projects.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com"/>
