--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     </div>
 
                     <div class="project_wrapper right_wrapper">
-                        <div class="project right">
+                        <div class="project right" onclick="myFunction(event)" link="https://main.d357kwpwf83lqp.amplifyapp.com/">
                             <div data-title="Location" class="project_left location">I</div>
                             <div class="project_right">
                                 <div class="right_top">
@@ -61,7 +61,7 @@
                     </div>
 
                     <div class="project_wrapper left_wrapper">
-                        <div class="project left">
+                        <div class="project left" onclick="myFunction(event)" link="https://helmgart-1547e.web.app/">
                             <div data-title="Helmgart Guesser" class="project_left helmgart">I</div>
                             <div class="project_right">
                                 <div class="right_top">
@@ -75,7 +75,7 @@
                     </div>
 
                     <div class="project_wrapper right_wrapper">
-                        <div class="project right">
+                        <div class="project right" onclick="myFunction(event)" link="https://nervous-fermi-0fb69a.netlify.app/">
                             <div data-title="Memory" class="project_left memory">I</div>
                             <div class="project_right">
                                 <div class="right_top">
@@ -89,7 +89,7 @@
                     </div>
 
                     <div class="project_wrapper left_wrapper">
-                        <div class="project left" onclick="myFunction(event)" link="https://elated-bell-87011c.netlify.app/">
+                        <div class="project left" onclick="myFunction(event)" link="https://designo-rust.vercel.app/about">
                             <div data-title="Designo" class="project_left landing">I</div>
                             <div class="project_right">
                                 <div class="right_top">   
